# test-c

./: .gitignore  CMakeLists.txt  README.md  custom.ld  main.c  编码及代码优化参考规范.md
common/: class_t.c  class_t.h  global_function.c  global_function.h  mcr_util.h  tool.c  tool.h  util.c  util.h
common/algorithm/: dlx.c  dlx.h
common/framework/: enum_def.h  oop.c  oop.h  type_def.h  type_meta.h
common/framework/oop/: oop.c  oop.h  oop_heap.h
common/framework/oop/oop_heap_usage/: oop_heap_usage.c  oop_heap_usage.h
common/framework/oop/oop_heap_usage/rect/: rect.c  rect.h
common/framework/oop/oop_heap_usage/shape/: shape.c  shape.h
common/framework/oop/oop_usage/: oop_usage.c  testClass.h
common/framework/oop/oop_usage/class_demo/: implement.c  private.h  protected.h  public.h
common/framework/oop/oop_usage/class_demo_base/: implement.c  private.h  protected.h  public.h
common/framework/oop/type_info/: type_info.c  type_info.h
common/framework/oop_usage/: oop_usage.c  oop_usage.h
common/framework/oop_usage/class_demo/: class_demo.c  class_demo.h  class_demo_protected.h  implement.c  protected.h  public.h
common/framework/oop_usage/class_demo_base/: class_demo_base.c  class_demo_base.h  class_demo_base_protected.h  implement.c  private.h  protected.h  public.h
common/framework/reflection/: meta.c  meta.h  type_meta.c  type_meta.h
common/framework/reflection/template/: base_type_def_meta.h  def_meta_base_type.h  def_meta_enum.h  def_meta_int.h  def_meta_struct.h  def_struct.h  enum_def.h  enum_def_meta.h  int_def_meta.h  struct_def.h  struct_def_meta.h
common/structure/: list.c  list.h  list_base.c  list_base.h  vector.c  vector.h  vector_base.h
config/: global_config.h  hardware_config.h
doc/: 关于GUI框架及中间件的思考.md  编码及代码优化参考规范.md
docs/: C语言知识梳理.md  markdown语法速查.md  编码及代码优化参考规范.md  莫名其妙缩写词典.md
game/: sudoku.c  sudoku.h  tic_tac_toe.c  tic_tac_toe.h  word_search.c  word_search.h
modules/: battery.c  battery.h  calculator.c  calculator.h  unicode.c  unicode.h  utf.c  utf.h
